--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,9 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@lib/*": ["./src/lib/*"],
-      "@components/*": ["./src/app/components/*"],
-      "@context/*": ["./src/app/context/*"],
+      "@lib/*": ["./src/ts-base/lib/*"],
+      "@components/*": ["./src/component/*"],
+      "@context/*": ["./src/context/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
