--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.98.2",
+    "bip39": "^3.1.0",
+    "ed25519-hd-key": "^1.3.0",
     "ethers": "^6.14.4",
     "next": "15.3.4",
     "react": "^19.0.0",
