--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,10 @@
   "manifest_version": 3,
   "name": "Easy Wallet Extension",
   "version": "1.0",
-  "description": "Built with Next.js",
   "action": {
-    "default_popup": "popup/index.html",
-    "default_icon": {
-      "16": "dogdog.png",
-      "48": "dogdog.png",
-      "128": "dogdog.png"
-    }
+    "default_popup": "popup.html",
+    "default_icon": "icon.png"
   },
-  "permissions": [],
   "background": {
     "service_worker": "background.js"
   },
@@ -21,5 +15,5 @@
       "js": ["content.js"]
     }
   ],
-  "host_permissions": ["<all_urls>"]
+  "permissions": ["storage", "tabs", "activeTab", "scripting"]
 }
