--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@scure/bip39": "^1.6.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
-    "bip39": "^3.1.0",
-    "ed25519-hd-key": "^1.3.0",
     "ethers": "^6.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
