--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,15 +6,15 @@
   "action": {
     "default_popup": "index.html",
     "default_icon": {
-      "16": "dogdog.png",
-      "48": "dogdog.png",
-      "128": "dogdog.png"
+      "16": "/assets/dogdog.png",
+      "48": "/assets/dogdog.png",
+      "128": "/assets/dogdog.png"
     }
   },
   "permissions": [],
   "icons": {
-    "16": "dogdog.png",
-    "48": "dogdog.png",
-    "128": "dogdog.png"
+    "16": "/assets/dogdog.png",
+    "48": "/assets/dogdog.png",
+    "128": "/assets/dogdog.png"
   }
 }
